--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 	<title>404 - страница не найдена</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-<link href="/assets/css/main.min.css?v=615486064a0bb10ec674" rel="stylesheet"></head>
+<link href="assets/css/main.min.css?v=615486064a0bb10ec674" rel="stylesheet"></head>
 <body>
 	<section class="vh-100 w-100 d-flex align-items-center bg-light">
 		<div class="container">
@@ -88,5 +88,5 @@
 			</div>
 		</div>
 	</section>
-<script defer src="/assets/js/vendor.min.js?v=5d092a214abc978ebb19"></script><script defer src="/assets/js/main.min.js?v=615486064a0bb10ec674"></script></body>
+<script defer src="assets/js/vendor.min.js?v=5d092a214abc978ebb19"></script><script defer src="assets/js/main.min.js?v=615486064a0bb10ec674"></script></body>
 </html>
