--- a/page2.html
+++ b/page2.html
@@ -14,12 +14,12 @@
 <header class="mb-33">
         <div class="container header">           
             <button class="header-icon e--mob">
-                <img src="/assets/img/mob-menu.svg" alt="Mobile menu" width="24" height="12">
+                <img src="img/mob-menu.svg" alt="Mobile menu" width="24" height="12">
             </button>           
-            <img class="header-logo" src="/assets/img/logo.svg" alt="Logo" width="101" height="36">
+            <img class="header-logo" src="img/logo.svg" alt="Logo" width="101" height="36">
             <div class="d-flex">
                 <button class="header-icon e--dsk">
-                    <img src="/assets/img/search.svg" alt="Search" width="17" height="17">
+                    <img src="img/search.svg" alt="Search" width="17" height="17">
                 </button>
                 <nav>
                     <a href="#" class="header-link active">Home</a>
@@ -33,13 +33,13 @@
                 </nav>               
                 <div class="header-right-nav">
                     <button class="header-icon">
-                        <img src="/assets/img/cart.svg" alt="Cart" width="21" height="20">
+                        <img src="img/cart.svg" alt="Cart" width="21" height="20">
                     </button>
                     <button class="header-icon e--dsk">
-                        <img src="/assets/img/heart.svg" alt="Search" width="20" height="18">
+                        <img src="img/heart.svg" alt="Search" width="20" height="18">
                     </button>
                     <button class="header-icon e--dsk">
-                        <img src="/assets/img/user.svg" alt="Search" width="15" height="18">
+                        <img src="img/user.svg" alt="Search" width="15" height="18">
                     </button>
                 </div>
             </div>
@@ -97,34 +97,34 @@
                                     <p class="flex-jc-right-text">Filter</p>
                                 </div>
                                 <div>
-                                    <img src="/assets/img/Group (8).png" alt="icon" class="cursor">
+                                    <img src="img/Group (8).png" alt="icon" class="cursor">
                                 </div>
                                 <div>
                                     <p class="flex-jc-right-text">Sort by Price</p>
                                 </div>
                                 <div>
-                                    <img src="/assets/img/Vector 10.png" alt="icon" class="cursor">
+                                    <img src="img/Vector 10.png" alt="icon" class="cursor">
                                 </div>
                                 <div>
-                                    <img src="/assets/img/Group (7).png" alt="icon" class="cursor">
+                                    <img src="img/Group (7).png" alt="icon" class="cursor">
                                 </div>
                                 <div>
-                                    <img src="/assets/img/Group 5328.png" alt="icon">
+                                    <img src="img/Group 5328.png" alt="icon">
                                 </div>
                                 <div>
-                                    <img src="/assets/img/Group 5329.png" alt="icon">
+                                    <img src="img/Group 5329.png" alt="icon">
                                 </div>
                                 <div>
-                                    <img src="/assets/img/Group 5330.png" alt="icon">
+                                    <img src="img/Group 5330.png" alt="icon">
                                 </div>
                                 <div>
-                                    <img src="/assets/img/Group 5331.png" alt="icon">
+                                    <img src="img/Group 5331.png" alt="icon">
                                 </div>
                                 <div>
-                                    <img src="/assets/img/Group 5332.png" alt="icon">
+                                    <img src="img/Group 5332.png" alt="icon">
                                 </div>
                                 <div>
-                                    <img src="/assets/img/Group 5333.png" alt="icon">
+                                    <img src="img/Group 5333.png" alt="icon">
                                 </div>
                             </div>
                         </div>
@@ -138,7 +138,7 @@
                             <div class="cart-item">
                                 <div class="cart-item-img">
                                     <picture>
-                                        <img src="/assets/img/15 1.png" alt="picture">
+                                        <img src="img/15 1.png" alt="picture">
                                     </picture>
                                 </div>
                                 <div class="cart-item-info">
@@ -155,7 +155,7 @@
                             <div class="cart-item">
                                 <div class="cart-item-img">
                                     <picture>
-                                        <img src="/assets/img/14 1.png" alt="picture">
+                                        <img src="img/14 1.png" alt="picture">
                                     </picture>
                                 </div>
                                 <div class="cart-item-info">
@@ -172,7 +172,7 @@
                             <div class="cart-item">
                                 <div class="cart-item-img">
                                     <picture>
-                                        <img src="/assets/img/13 1.png" alt="picture">
+                                        <img src="img/13 1.png" alt="picture">
                                     </picture>
                                 </div>
                                 <div class="cart-item-info">
@@ -189,7 +189,7 @@
                             <div class="cart-item">
                                 <div class="cart-item-img">
                                     <picture>
-                                        <img src="/assets/img/12 1.png" alt="picture">
+                                        <img src="img/12 1.png" alt="picture">
                                     </picture>
                                 </div>
                                 <div class="cart-item-info">
@@ -206,7 +206,7 @@
                             <div class="cart-item">
                                 <div class="cart-item-img">
                                     <picture>
-                                        <img src="/assets/img/11 1.png" alt="picture">
+                                        <img src="img/11 1.png" alt="picture">
                                     </picture>
                                 </div>
                                 <div class="cart-item-info">
@@ -223,7 +223,7 @@
                             <div class="cart-item">
                                 <div class="cart-item-img">
                                     <picture>
-                                        <img src="/assets/img/10 1.png" alt="picture">
+                                        <img src="img/10 1.png" alt="picture">
                                     </picture>
                                 </div>
                                 <div class="cart-item-info">
@@ -240,7 +240,7 @@
                             <div class="cart-item">
                                 <div class="cart-item-img">
                                     <picture>
-                                        <img src="/assets/img/9 61.png" alt="picture">
+                                        <img src="img/9 61.png" alt="picture">
                                     </picture>
                                 </div>
                                 <div class="cart-item-info">
@@ -257,7 +257,7 @@
                             <div class="cart-item">
                                 <div class="cart-item-img">
                                     <picture>
-                                        <img src="/assets/img/8 1.png" alt="picture">
+                                        <img src="img/8 1.png" alt="picture">
                                     </picture>
                                 </div>
                                 <div class="cart-item-info">
@@ -297,14 +297,14 @@
 			<footer>
 <div class="foot-bg-black">
     <div class="foot-logo container">
-        <img src="/assets/img/logo (2).png" alt="logo">
+        <img src="img/logo (2).png" alt="logo">
     </div>
 </div>
             <div class="bg-black-wrapper">
                 <div class="bg-black">
                 <div class="logo-wrapper">
                             <div class="logo">
-                                <img src="/assets/img/logo (2).png" alt="logo">
+                                <img src="img/logo (2).png" alt="logo">
                             </div>
                 </div>
                     <div class="bg-black-left">
@@ -336,9 +336,9 @@
                     </div>
                    
                     <div class="bg-black-right">
-                        <img src="/assets/img/Vector 15.png" alt="icon">
-                        <img src="/assets/img/Vector 15.png" alt="icon">
-                        <img src="/assets/img/Vector 15.png" alt="icon">
+                        <img src="img/Vector 15.png" alt="icon">
+                        <img src="img/Vector 15.png" alt="icon">
+                        <img src="img/Vector 15.png" alt="icon">
                     </div>
                     
                 </div> 
@@ -346,14 +346,14 @@
                 <div class="footer-social">
                     <div class="footer-social-wr">
                         <div class="social-mob">
-                            <img src="/assets/img/Group 402.png" alt="icon">
-                            <img src="/assets/img/Group 401.png" alt="icon">
-                            <img src="/assets/img/Group 400.png" alt="icon">
+                            <img src="img/Group 402.png" alt="icon">
+                            <img src="img/Group 401.png" alt="icon">
+                            <img src="img/Group 400.png" alt="icon">
                         </div>
                         <div class="social">
-                            <img src="/assets/img/Vector (1).png" alt="icon">
-                            <img src="/assets/img/Vector (2).png" alt="icon">
-                            <img src="/assets/img/Vector (3).png" alt="icon">
+                            <img src="img/Vector (1).png" alt="icon">
+                            <img src="img/Vector (2).png" alt="icon">
+                            <img src="img/Vector (3).png" alt="icon">
                         </div>
                         <div class="footer-text">
                             <p class="white d-center">Copyright © 2022 | All Rights Reserved</p>
