--- a/page3.html
+++ b/page3.html
@@ -14,12 +14,12 @@
 <header class="mb-33">
         <div class="container header">           
             <button class="header-icon e--mob">
-                <img src="/assets/img/mob-menu.svg" alt="Mobile menu" width="24" height="12">
+                <img src="img/mob-menu.svg" alt="Mobile menu" width="24" height="12">
             </button>           
-            <img class="header-logo" src="/assets/img/logo.svg" alt="Logo" width="101" height="36">
+            <img class="header-logo" src="img/logo.svg" alt="Logo" width="101" height="36">
             <div class="d-flex">
                 <button class="header-icon e--dsk">
-                    <img src="/assets/img/search.svg" alt="Search" width="17" height="17">
+                    <img src="img/search.svg" alt="Search" width="17" height="17">
                 </button>
                 <nav>
                     <a href="#" class="header-link active">Home</a>
@@ -33,13 +33,13 @@
                 </nav>               
                 <div class="header-right-nav">
                     <button class="header-icon">
-                        <img src="/assets/img/cart.svg" alt="Cart" width="21" height="20">
+                        <img src="img/cart.svg" alt="Cart" width="21" height="20">
                     </button>
                     <button class="header-icon e--dsk">
-                        <img src="/assets/img/heart.svg" alt="Search" width="20" height="18">
+                        <img src="img/heart.svg" alt="Search" width="20" height="18">
                     </button>
                     <button class="header-icon e--dsk">
-                        <img src="/assets/img/user.svg" alt="Search" width="15" height="18">
+                        <img src="img/user.svg" alt="Search" width="15" height="18">
                     </button>
                 </div>
             </div>
@@ -53,11 +53,11 @@
                             <div class="nav-title-1">
                                 <p>Home</p>
                             </div>
-                            <img src="/assets/img/31.png" alt="icon" class="page-3">
+                            <img src="img/31.png" alt="icon" class="page-3">
                             <div class="nav-title-2">
                                 <p>Table</p>
                             </div>
-                            <img src="/assets/img/31.png" alt="icon" class="page-3">
+                            <img src="img/31.png" alt="icon" class="page-3">
                             <div class="nav-title-3">
                                 <p>Product Name</p>
                             </div>
@@ -70,7 +70,7 @@
                     <div class="page3">
                         <div class="page3-block-left-right">
                             <div class="page3-block-left">
-                                <img src="/assets/img/page3-1.png" alt="room">
+                                <img src="img/page3-1.png" alt="room">
                             </div>
                             <div class="page3-block-right">
                                 <h1>Product Name</h1>
@@ -78,13 +78,13 @@
                                 <div class="page3-block-right-text"> <p class="page3-block-right-text-p">Product Short Description senectus et netus et malesuada fames ac turpis egestas. Vesitbulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend </p></div>
                                 <div class="page3-block-right-btn">
                                     <div class="btn-plus-minus">
-                                        <img src="/assets/img/-.png" alt="icon" class="icon">
-                                        <img src="/assets/img/1.png" alt="icon">
-                                        <img src="/assets/img/+.png" alt="icon" class="icon">
+                                        <img src="img/-.png" alt="icon" class="icon">
+                                        <img src="img/1.png" alt="icon">
+                                        <img src="img/+.png" alt="icon" class="icon">
                                     </div>
                                     <button class="btn btn-dark btn-dark-active btn-page-3">Add to cart</button>
                                     <div class="heart">
-                                        <img src="/assets/img/heart.png" alt="heart">
+                                        <img src="img/heart.png" alt="heart">
                                     </div>
                                 </div>
                                 <ol class="page-3-list">
@@ -96,13 +96,13 @@
                         </div>
                         <div class="page3-block-down">
                             <div class="page3-block-down-img-1">
-                                <img src="/assets/img/page3-2.png" alt="room">
+                                <img src="img/page3-2.png" alt="room">
                             </div>
                             <div class="page3-block-down-img-2">
-                                <img src="/assets/img/page3-3.png" alt="room">
+                                <img src="img/page3-3.png" alt="room">
                             </div>
                             <div class="page3-block-down-img-3">
-                                <img src="/assets/img/page3-4.png" alt="room">
+                                <img src="img/page3-4.png" alt="room">
                             </div>
                         </div>
                     </div>
@@ -134,7 +134,7 @@
                             <div class="cart-item">
                                 <div class="cart-item-img">
                                     <picture>
-                                        <img src="/assets/img/15 1.png" alt="picture">
+                                        <img src="img/15 1.png" alt="picture">
                                     </picture>
                                 </div>
                                 <div class="cart-item-info">
@@ -151,7 +151,7 @@
                             <div class="cart-item">
                                 <div class="cart-item-img">
                                     <picture>
-                                        <img src="/assets/img/14 1.png" alt="picture">
+                                        <img src="img/14 1.png" alt="picture">
                                     </picture>
                                 </div>
                                 <div class="cart-item-info">
@@ -168,7 +168,7 @@
                             <div class="cart-item">
                                 <div class="cart-item-img">
                                     <picture>
-                                        <img src="/assets/img/13 1.png" alt="picture">
+                                        <img src="img/13 1.png" alt="picture">
                                     </picture>
                                 </div>
                                 <div class="cart-item-info">
@@ -185,7 +185,7 @@
                             <div class="cart-item">
                                 <div class="cart-item-img">
                                     <picture>
-                                        <img src="/assets/img/12 1.png" alt="picture">
+                                        <img src="img/12 1.png" alt="picture">
                                     </picture>
                                 </div>
                                 <div class="cart-item-info">
@@ -205,7 +205,7 @@
                             <div class="cart-item">
                                 <div class="cart-item-img">
                                     <picture>
-                                        <img src="/assets/img/11 1.png" alt="picture">
+                                        <img src="img/11 1.png" alt="picture">
                                     </picture>
                                 </div>
                                 <div class="cart-item-info">
@@ -222,7 +222,7 @@
                             <div class="cart-item">
                                 <div class="cart-item-img">
                                     <picture>
-                                        <img src="/assets/img/10 1.png" alt="picture">
+                                        <img src="img/10 1.png" alt="picture">
                                     </picture>
                                 </div>
                                 <div class="cart-item-info">
@@ -239,7 +239,7 @@
                             <div class="cart-item">
                                 <div class="cart-item-img">
                                     <picture>
-                                        <img src="/assets/img/9 61.png" alt="picture">
+                                        <img src="img/9 61.png" alt="picture">
                                     </picture>
                                 </div>
                                 <div class="cart-item-info">
@@ -256,7 +256,7 @@
                             <div class="cart-item">
                                 <div class="cart-item-img">
                                     <picture>
-                                        <img src="/assets/img/8 1.png" alt="picture">
+                                        <img src="img/8 1.png" alt="picture">
                                     </picture>
                                 </div>
                                 <div class="cart-item-info">
@@ -277,14 +277,14 @@
 			<footer>
 <div class="foot-bg-black">
     <div class="foot-logo container">
-        <img src="/assets/img/logo (2).png" alt="logo">
+        <img src="img/logo (2).png" alt="logo">
     </div>
 </div>
             <div class="bg-black-wrapper">
                 <div class="bg-black">
                 <div class="logo-wrapper">
                             <div class="logo">
-                                <img src="/assets/img/logo (2).png" alt="logo">
+                                <img src="img/logo (2).png" alt="logo">
                             </div>
                 </div>
                     <div class="bg-black-left">
@@ -316,9 +316,9 @@
                     </div>
                    
                     <div class="bg-black-right">
-                        <img src="/assets/img/Vector 15.png" alt="icon">
-                        <img src="/assets/img/Vector 15.png" alt="icon">
-                        <img src="/assets/img/Vector 15.png" alt="icon">
+                        <img src="img/Vector 15.png" alt="icon">
+                        <img src="img/Vector 15.png" alt="icon">
+                        <img src="img/Vector 15.png" alt="icon">
                     </div>
                     
                 </div> 
@@ -326,14 +326,14 @@
                 <div class="footer-social">
                     <div class="footer-social-wr">
                         <div class="social-mob">
-                            <img src="/assets/img/Group 402.png" alt="icon">
-                            <img src="/assets/img/Group 401.png" alt="icon">
-                            <img src="/assets/img/Group 400.png" alt="icon">
+                            <img src="img/Group 402.png" alt="icon">
+                            <img src="img/Group 401.png" alt="icon">
+                            <img src="img/Group 400.png" alt="icon">
                         </div>
                         <div class="social">
-                            <img src="/assets/img/Vector (1).png" alt="icon">
-                            <img src="/assets/img/Vector (2).png" alt="icon">
-                            <img src="/assets/img/Vector (3).png" alt="icon">
+                            <img src="img/Vector (1).png" alt="icon">
+                            <img src="img/Vector (2).png" alt="icon">
+                            <img src="img/Vector (3).png" alt="icon">
                         </div>
                         <div class="footer-text">
                             <p class="white d-center">Copyright © 2022 | All Rights Reserved</p>
