--- a/ui.html
+++ b/ui.html
@@ -14,12 +14,12 @@
 <header class="mb-33">
         <div class="container header">           
             <button class="header-icon e--mob">
-                <img src="img/mob-menu.svg" alt="Mobile menu" width="24" height="12">
+                <img src="assets/img/mob-menu.svg" alt="Mobile menu" width="24" height="12">
             </button>           
-            <img class="header-logo" src="img/logo.svg" alt="Logo" width="101" height="36">
+            <img class="header-logo" src="assets/img/logo.svg" alt="Logo" width="101" height="36">
             <div class="d-flex">
                 <button class="header-icon e--dsk">
-                    <img src="img/search.svg" alt="Search" width="17" height="17">
+                    <img src="assets/img/search.svg" alt="Search" width="17" height="17">
                 </button>
                 <nav>
                     <a href="#" class="header-link active">Home</a>
@@ -33,13 +33,13 @@
                 </nav>               
                 <div class="header-right-nav">
                     <button class="header-icon">
-                        <img src="img/cart.svg" alt="Cart" width="21" height="20">
+                        <img src="assets/img/cart.svg" alt="Cart" width="21" height="20">
                     </button>
                     <button class="header-icon e--dsk">
-                        <img src="img/heart.svg" alt="Search" width="20" height="18">
+                        <img src="assets/img/heart.svg" alt="Search" width="20" height="18">
                     </button>
                     <button class="header-icon e--dsk">
-                        <img src="img/user.svg" alt="Search" width="15" height="18">
+                        <img src="assets/img/user.svg" alt="Search" width="15" height="18">
                     </button>
                 </div>
             </div>
@@ -95,14 +95,14 @@
 			<footer>
 <div class="foot-bg-black">
     <div class="foot-logo container">
-        <img src="img/logo (2).png" alt="logo">
+        <img src="assets/img/logo (2).png" alt="logo">
     </div>
 </div>
             <div class="bg-black-wrapper">
                 <div class="bg-black">
                 <div class="logo-wrapper">
                             <div class="logo">
-                                <img src="img/logo (2).png" alt="logo">
+                                <img src="assets/img/logo (2).png" alt="logo">
                             </div>
                 </div>
                     <div class="bg-black-left">
@@ -134,9 +134,9 @@
                     </div>
                    
                     <div class="bg-black-right">
-                        <img src="img/Vector 15.png" alt="icon">
-                        <img src="img/Vector 15.png" alt="icon">
-                        <img src="img/Vector 15.png" alt="icon">
+                        <img src="assets/img/Vector 15.png" alt="icon">
+                        <img src="assets/img/Vector 15.png" alt="icon">
+                        <img src="assets/img/Vector 15.png" alt="icon">
                     </div>
                     
                 </div> 
@@ -144,14 +144,14 @@
                 <div class="footer-social">
                     <div class="footer-social-wr">
                         <div class="social-mob">
-                            <img src="img/Group 402.png" alt="icon">
-                            <img src="img/Group 401.png" alt="icon">
-                            <img src="img/Group 400.png" alt="icon">
+                            <img src="assets/img/Group 402.png" alt="icon">
+                            <img src="assets/img/Group 401.png" alt="icon">
+                            <img src="assets/img/Group 400.png" alt="icon">
                         </div>
                         <div class="social">
-                            <img src="img/Vector (1).png" alt="icon">
-                            <img src="img/Vector (2).png" alt="icon">
-                            <img src="img/Vector (3).png" alt="icon">
+                            <img src="assets/img/Vector (1).png" alt="icon">
+                            <img src="assets/img/Vector (2).png" alt="icon">
+                            <img src="assets/img/Vector (3).png" alt="icon">
                         </div>
                         <div class="footer-text">
                             <p class="white d-center">Copyright © 2022 | All Rights Reserved</p>
