--- a/ui.html
+++ b/ui.html
@@ -7,7 +7,7 @@
 	<title>Список ссылок на страницы</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-<link href="/assets/css/main.min.css?v=615486064a0bb10ec674" rel="stylesheet"></head>
+<link href="assets/css/main.min.css?v=615486064a0bb10ec674" rel="stylesheet"></head>
 <body>
 			
 
@@ -160,5 +160,5 @@
                     </div>
                 </div>
             </div>         
-        </footer>	<script defer src="/assets/js/vendor.min.js?v=5d092a214abc978ebb19"></script><script defer src="/assets/js/main.min.js?v=615486064a0bb10ec674"></script></body>
+        </footer>	<script defer src="assets/js/vendor.min.js?v=5d092a214abc978ebb19"></script><script defer src="assets/js/main.min.js?v=615486064a0bb10ec674"></script></body>
 </html>
